feat: aggiunto specifica per ddo e categorizzato tutti gli endpoing creato un endpoint placeholder per /devices/:deviceId/ddos/ da implementare in futuro aggiunto esempi ad alcuni endpoint nella specifica
